adicionando plano de fundo
plano de fundo adicionado com algumas diferenças

--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@
     height: auto;
     opacity: 0.9;
 }
+#bg-image {
+    background-image: url(img/background-editado.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
+    background-attachment: fixed;
+}
