add efeito de transição

--- a/style.css
+++ b/style.css
@@ -9,3 +9,22 @@
     background-repeat: repeat;
     background-attachment: fixed;
 }
+
+body {
+    animation: fadeIn 2.5s;
+}
+
+@keyframes fadeIn {
+    0%   {opacity: 0; background: linear-gradient(145deg, rgba(247,246,113,1) 0%, rgba(0,0,0,1) 30%);
+}
+    20%  {opacity: 0.2; background: linear-gradient(145deg, rgba(247,246,113,1) 0%, rgba(0,0,0,1) 30%);
+}
+    40%  {opacity: 0.4; background: linear-gradient(145deg, rgba(247,246,113,1) 0%, rgba(0,0,0,1) 30%);
+}
+    60%  {opacity: 0.6; background: linear-gradient(145deg, rgba(247,246,113,1) 0%, rgba(0,0,0,1) 30%);
+}
+    80% {opacity: 0.8; background: linear-gradient(145deg, rgba(247,246,113,1) 0%, rgba(0,0,0,1) 30%);
+}
+    100% {opacity: 1; background: linear-gradient(145deg, rgba(247,246,113,1) 0%, rgba(0,0,0,1) 30%);
+}
+}
